# rs-web-starter

./: LICENSE_MIT  Makefile  README.md
backend/: .env.dev  .env.example  Cargo.toml  Dockerfile  wait-db.sh
backend/src/: handlers.rs  main.rs  models.rs
develop/: README.md  docker-compose.yml
develop/db/: docker-compose.yml
docs/: README.md
document/: README.md
frontend/: .gitignore  Cargo.toml  Dockerfile  README.md  nginx.conf  package.json  webpack.config.js
frontend/frontend-tests/: main.js  package.json
frontend/src/: app.rs  lib.rs
frontend/static/: index.html
frontend/tests/: web.rs
infra/: README.md
