[package]
name = "backend"
version = "0.1.0"
authors = ["uta8a <noumodulity@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
listenfd = "0.3.3"
serde = "1.0.106"
serde_json = "1.0.51"
dotenv = "0.15.0"
env_logger = "0.8.1"
log = "0.4.8"
anyhow = "1.0.28"
futures = "0.3.7"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8.8"
serde_derive = "1.0"
actix-service = "1.0.1"
alcoholic_jwt = "1.0.0"
reqwest = "0.10.8"
actix-rt = "1.0.0"
